# product-cli

./: .gitignore  .mcp.json  AGENTS.md  CHECKLIST.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  gaps.json  metrics.jsonl  product.toml  requests.jsonl  rust-toolchain.toml  server.json
product-cli/: Cargo.toml
product-cli/src/: main.rs
product-cli/src/commands/: adr.rs  adr_conflicts.rs  adr_seal.rs  adr_write.rs  agent_init.rs  archetype.rs  author.rs  blueprint.rs  build.rs  build_guard.rs  build_lsp.rs  build_seam_emit.rs  build_session.rs  build_skip.rs  build_verify.rs  cell.rs  checklist.rs  codegen.rs  codegen_how.rs  conformance.rs  context.rs  cycle_times.rs  decider.rs  deliverable.rs  dep.rs  deployable_unit.rs  design_system.rs  dispatch.rs  domain.rs  domain_data.rs  domain_fields.rs  domain_fields_v16.rs  domain_rows.rs  drift.rs  drift_diff.rs  feature.rs  feature_fields.rs  feature_write.rs  gap.rs  graph_autolink.rs  (+47 more)
product-cli/src/commands/context/: templates.rs
product-cli/tests/: code_quality_tests.rs  framework.rs  integration_tests.rs
product-cli/tests/fixtures/onboard-large/: Cargo.toml
product-cli/tests/integration/: mod.rs
product-cli/tests/sessions/: exit_criteria.rs  ft_062_depends_on_and_strict_validation.rs  ft_066_mcp_status_and_link_parity.rs  ft_069_mcp_graph_check_parity.rs  harness_self_tests.rs  st_001_create_feature_with_adr_and_tc.rs  st_005_create_multiple_adrs_same_phase.rs  st_010_change_append_domain.rs  st_012_change_invalid_target.rs  st_013_change_body_mutation.rs  st_014_change_remove_from_array.rs  st_020_failed_apply_leaves_zero_files.rs  st_030_validation_e013_dep_no_adr.rs  st_033_validation_e012_unknown_domain.rs  st_040_phase_gate_blocks_on_failing_exit_criteria.rs  st_041_phase_gate_opens_after_verify.rs  st_042_phase_gate_no_exit_criteria_always_open.rs  st_052_verify_failing_tc_stays_in_progress.rs  st_060_context_includes_dependency_section.rs  st_110_verify_pipeline.rs  st_120_gap_bundle.rs  st_131_conflict_bundle.rs  st_140_mcp_adr_lifecycle.rs  st_701_discover_canonical_alias_legacy.rs  st_702_ft057_exit_criteria.rs  st_761_mcp_canonical_layout.rs
product-core/: Cargo.toml
product-core/src/: config.rs  config_migrate.rs  config_sections.rs  config_tests.rs  demo.rs  dep_types.rs  lib.rs  rdf.rs  tags.rs  types.rs
product-core/src/adr/: create.rs  supersede.rs
product-core/src/agent_context/: formal_schema.md  formal_schema.rs  mod.rs
product-core/src/author/: domain.rs  domain_prompt.md  mod.rs  prompts.rs  tests.rs  workflow.rs  workflow_prompt.md
product-core/src/conformance/: check.rs  mod.rs  render.rs  tests.rs
product-core/src/cycle_times/: mod.rs
product-core/src/drift/: check.rs  tests.rs
product-core/src/feature/: create.rs
product-core/src/formal/: mod.rs  parser.rs  tests.rs
product-core/src/gap/: bundle.rs  model.rs
product-core/src/graph/: full_check.rs  lifecycle_validation.rs  planning_validation.rs  stats.rs
product-core/src/guide/: mod.rs  plan.rs  render.rs  tests.rs
product-core/src/implement/: pipeline.rs  runner_autofill.rs
product-core/src/io/: mod.rs
product-core/src/metrics/: mod.rs  tests.rs
product-core/src/migrate/: extract.rs  mod.rs  tests.rs  types.rs
product-core/src/onboard/: evidence.rs  scan.rs  seed.rs  types.rs
product-core/src/parse/: mod.rs
product-core/src/pattern/: tests.rs
product-core/src/pf/: archetype.rs  archetype_tests.rs  archetype_turtle.rs  authoring_scope.rs  authoring_scope_enforce.rs  authoring_scope_join.rs  authoring_scope_tests.rs  blueprint.rs  blueprint_tests.rs  blueprint_turtle.rs  build.rs  build_metrics.rs  build_metrics_tests.rs  build_seam.rs  build_seam_convert.rs  build_spmc.rs  build_spmc_tests.rs  build_tests.rs  bundle.rs  bundle_tests.rs  capability.rs  capability_tests.rs  cell.rs  cell_validate.rs  cell_validate_tests.rs  codegen.rs  codegen_backend.rs  codegen_cell.rs  codegen_decider.rs  codegen_fixtures.rs  codegen_flow.rs  codegen_ident.rs  codegen_infer.rs  codegen_kotlin.rs  codegen_kotlin_facts.rs  codegen_manifest.rs  codegen_openapi.rs  codegen_oracle.rs  codegen_program.rs  codegen_projector.rs  (+144 more)
product-core/src/request/: log.rs
product-core/src/request_log/: canonical.rs
product-core/src/status/: mod.rs  render.rs  tests.rs
product-core/src/tc/: runner_config.rs  status_change.rs
product-core/tests/property/: fileops_properties.rs  graph_properties.rs  init_properties.rs  mod.rs  parser_properties.rs  request_properties.rs
product-mcp/: Cargo.toml
product-mcp/src/: adr_lifecycle.rs  build_handler.rs  codegen_handlers.rs  decider_handlers.rs  decider_handlers_tests.rs  delivery_handlers.rs  delivery_handlers_tests.rs  dep_handlers.rs  dep_handlers_tests.rs  deployable_unit_handlers.rs  deployable_unit_handlers_tests.rs  design_system_handlers.rs  domain_handlers.rs  domain_handlers_tests.rs  field_handlers.rs  framework_read_handlers.rs  framework_read_handlers_tests.rs  framework_scaffold_handlers.rs  framework_scaffold_handlers_tests.rs  framework_write_handlers.rs  framework_write_handlers_tests.rs  http.rs  http_ui.rs  http_view.rs  lib.rs  pattern_handlers.rs  pf_mcp.rs  pf_view.rs  primitive_handlers.rs  primitive_handlers_tests.rs  product_handlers.rs  projector_handlers.rs  projector_handlers_tests.rs  read_handlers.rs  registry.rs  reify_handlers.rs  request_handlers.rs  scaffold.rs  scope_handlers.rs  stdio.rs  (+4 more)
product-mcp/src/assets/: view.html
product-mcp/src/copilot/: bridge.rs  bridge_tests.rs  copilot_tests.rs  host.rs  mod.rs  repl.rs
product-mcp/src/domain/: args.rs  handlers.rs  mod.rs  registry.rs  registry_tests.rs  session_handlers.rs  stdio.rs  tools.rs
product-mcp/src/health_handlers/: drift_check.rs  preflight.rs  shared.rs
product-mcp/src/pf_view/: conformance.rs  pf_build.rs  pf_flows.rs  pf_how.rs  pf_repo.rs  pf_ui.rs
product-mcp/src/tools/: build.rs  codegen.rs  decider.rs  delivery.rs  deployable_unit.rs  design_system.rs  domain.rs  how_author.rs  legacy_pf.rs  mod.rs  primitive.rs  product.rs  projector.rs  read.rs  reify.rs  scope.rs
(+1834 files in other folders)
