[package]
name    = "product"
version = "0.1.0"
edition = "2021"
authors = ["PiCloud Contributors"]
license = "Apache-2.0"
description = "Knowledge graph CLI for managing features, ADRs, and test criteria"

[lib]
name = "product_lib"
path = "src/lib.rs"

[[bin]]
name = "product"
path = "src/main.rs"

[dependencies]
clap       = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml       = "0.8"
oxigraph   = { version = "0.4", default-features = false }
uuid       = { version = "1", features = ["v4"] }
chrono     = { version = "0.4", features = ["serde"] }
regex      = "1"
sha2       = "0.10"
fd-lock    = "4"
tokio      = { version = "1", features = ["full"] }
axum       = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }
libc       = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
proptest = "1"

[[bench]]
name = "graph_bench"
harness = false
