[workspace]
members = ["product-core", "product-mcp", "product-cli", "xtask"]
# FT-107 / TC-889: the external-consumer fixture is built on demand by the
# TC-889 runner; it must NOT be treated as a workspace member, otherwise its
# path dependency on `product-core` would loop the workspace into itself.
exclude = ["product-cli/tests/fixtures/external-core-consumer"]
resolver = "2"

# Workspace-wide convention enforcement (Tier 3a).
# See conventions/docs/CTX002.md and conventions/README.md for the rule catalogue.
# Each lint should map to a CTX rule documented under conventions/docs/.
[workspace.lints.clippy]
# CTX002 — No unwrap in production code paths.
unwrap_used = "deny"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
