[package]
name = "product-cli"
version = "0.1.5"
edition = "2021"
authors = ["PiCloud Contributors"]
license = "Apache-2.0"
description = "Knowledge graph CLI for managing features, ADRs, patterns, and test criteria."
repository = "https://github.com/Hafeok/product-cli"
homepage = "https://github.com/Hafeok/product-cli"
readme = "../README.md"

[[bin]]
name = "product"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
product-core = { path = "../product-core" }
product-mcp  = { path = "../product-mcp" }
clap          = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
serde_yaml    = "0.9"
toml          = "0.8"
chrono        = { version = "0.4", features = ["serde"] }
libc          = "0.2"
tokio         = { version = "1", features = ["rt"] }

[dev-dependencies]
tempfile   = "3"
assert_cmd = "2"
predicates = "3"
regex      = "1"
sha2       = "0.10"
# FT-065 — validate the committed `server.json` MCP-registry manifest against
# the offline schema fixture in `tests/fixtures/server.schema.json`. Test-only.
jsonschema = { version = "0.46", default-features = false }
