[package]
name = "product-core"
version = "0.1.5"
edition = "2021"
authors = ["PiCloud Contributors"]
license = "Apache-2.0"
description = "Knowledge graph engine for features, ADRs, patterns, and test criteria — pure library, no CLI."
repository = "https://github.com/Hafeok/product-cli"
homepage = "https://github.com/Hafeok/product-cli"
readme = "../README.md"

[lib]
name = "product_core"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml       = "0.8"
oxigraph   = { version = "0.4", default-features = false }
uuid       = { version = "1", features = ["v4"] }
chrono     = { version = "0.4", features = ["serde"] }
regex      = "1"
sha2       = "0.10"
fd-lock    = "4"
libc       = "0.2"
notify     = { version = "6", default-features = false, features = ["macos_kqueue"] }

[dev-dependencies]
tempfile  = "3"
proptest  = "1"

[[bench]]
name = "graph_bench"
harness = false
