[package]
name = "product-core"
version = "0.2.0"
edition = "2021"
authors = ["PiCloud Contributors"]
license = "Apache-2.0"
description = "Knowledge graph engine for features, ADRs, patterns, and test criteria — pure library, no CLI."
repository = "https://github.com/Hafeok/product-cli"
homepage = "https://github.com/Hafeok/product-cli"
readme = "../README.md"

[lib]
name = "product_core"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml       = "0.8"
oxigraph   = { version = "0.4", default-features = false }
chrono     = { version = "0.4", features = ["serde"] }
glob       = "0.3"
sha2       = "0.10"
fd-lock    = "4"
libc       = "0.2"
notify     = { version = "6", default-features = false, features = ["macos_kqueue"] }
cel-interpreter = "0.10.0"
schemars   = "0.8"

[dev-dependencies]
tempfile  = "3"
proptest  = "1"

[[bench]]
name = "graph_bench"
harness = false
