[package]
name = "product-mcp"
version = "0.5.0"
edition = "2021"
authors = ["PiCloud Contributors"]
license = "Apache-2.0"
description = "MCP server (stdio + HTTP) for the Product knowledge graph."
repository = "https://github.com/Hafeok/product-cli"
homepage = "https://github.com/Hafeok/product-cli"
readme = "../README.md"

[lib]
name = "product_mcp"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
product-core = { path = "../product-core", version = "0.5.0" }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars   = "0.8"
tokio      = { version = "1", features = ["full"] }
axum       = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }
chrono     = { version = "0.4", features = ["serde"] }
notify     = "6"
tokio-stream = { version = "0.1", features = ["sync"] }
rust-embed = "8"
glob = "0.3"

[dev-dependencies]
tempfile = "3"
