[package]
name = "product-mcp"
version = "0.6.0"
edition = "2021"
authors = ["PiCloud Contributors"]
license = "Apache-2.0"
description = "MCP server (stdio + HTTP) for the Product knowledge graph."
repository = "https://github.com/Hafeok/product-cli"
homepage = "https://github.com/Hafeok/product-cli"
readme = "../README.md"

[lib]
name = "product_mcp"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
product-core = { path = "../product-core", version = "0.6.0" }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars   = "0.8"
tokio      = { version = "1", features = ["full"] }
axum       = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }
chrono     = { version = "0.4", features = ["serde"] }
notify     = "6"
tokio-stream = { version = "0.1", features = ["sync"] }
rust-embed = "8"
glob = "0.3"
# Copilot session host: drives the Copilot CLI in `--server` mode over
# JSON-RPC and registers the product tools as in-process (client-side) tools —
# no MCP server for the enterprise MCP allowlist to fingerprint. `bundled-cli`
# is off: the CLI binary is resolved at runtime from COPILOT_CLI_PATH / PATH
# (see `copilot::resolve_cli`), never downloaded at build time
# (COPILOT_SKIP_CLI_DOWNLOAD is pinned in .cargo/config.toml).
github-copilot-sdk = { version = "1.0.6-preview.1", default-features = false }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
